--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest --coverage --watchAll --runInBand",
+    "dev": "npx nodemon bin/http.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/Team-08-Bandly/Server#readme",
   "dependencies": {
+    "aws-sdk": "^2.868.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -27,7 +29,8 @@
     "postgres": "^1.0.2",
     "sequelize": "^6.5.1",
     "socket.io": "^2.0.0",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "unggah": "^2.1.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
