--- a/config/.env
+++ b/config/.env
@@ -1,12 +1,12 @@
 SECRET_JWT=BandlySecret
 
 DB_USERNAME_DEV=postgres
-DB_PASSWORD_DEV=1
+DB_PASSWORD_DEV=kalkulus
 DB_DATABASE_DEV=Bandly
 DB_HOST_DEV=localhost
 DB_DIALECT_DEV=postgres
 DB_USERNAME_TEST=postgres
-DB_PASSWORD_TEST=1
+DB_PASSWORD_TEST=kalkulus
 DB_DATABASE_TEST=Bandly-test
 DB_HOST_TEST=localhost
 DB_DIALECT_TEST=postgres
